# game-service

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
coverage_report/: index-sort-f.html  index-sort-l.html  index.html
coverage_report/handlers/: game_grpc.cpp.func-sort-c.html  game_grpc.cpp.func.html  game_grpc.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_report/include/handlers/: game_grpc.hpp.func-sort-c.html  game_grpc.hpp.func.html  game_grpc.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_report/include/managers/: igdb_manager.hpp.func-sort-c.html  igdb_manager.hpp.func.html  igdb_manager.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  manager.hpp.func-sort-c.html  manager.hpp.func.html  manager.hpp.gcov.html
coverage_report/include/parser/: index-sort-f.html  index-sort-l.html  index.html  json_parser.hpp.func-sort-c.html  json_parser.hpp.func.html  json_parser.hpp.gcov.html
coverage_report/include/repository/: index-sort-f.html  index-sort-l.html  index.html  postgres_manager.hpp.func-sort-c.html  postgres_manager.hpp.func.html  postgres_manager.hpp.gcov.html  repository.hpp.func-sort-c.html  repository.hpp.func.html  repository.hpp.gcov.html
coverage_report/include/structs/: game_info.hpp.func-sort-c.html  game_info.hpp.func.html  game_info.hpp.gcov.html  game_postgres.hpp.func-sort-c.html  game_postgres.hpp.func.html  game_postgres.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_report/parser/: index-sort-f.html  index-sort-l.html  index.html  json_parser.cpp.func-sort-c.html  json_parser.cpp.func.html  json_parser.cpp.gcov.html
coverage_report/src/handlers/: game_grpc.cpp.func-sort-c.html  game_grpc.cpp.func.html  game_grpc.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_report/src/managers/: igdb_manager.cpp.func-sort-c.html  igdb_manager.cpp.func.html  igdb_manager.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_report/src/parser/: index-sort-f.html  index-sort-l.html  index.html  json_parser.cpp.func-sort-c.html  json_parser.cpp.func.html  json_parser.cpp.gcov.html
coverage_report/src/repository/: index-sort-f.html  index-sort-l.html  index.html  postgres_manager.cpp.func-sort-c.html  postgres_manager.cpp.func.html  postgres_manager.cpp.gcov.html
coverage_report/src/tools/: index-sort-f.html  index-sort-l.html  index.html  utils.cpp.func-sort-c.html  utils.cpp.func.html  utils.cpp.gcov.html
coverage_report/tools/: index-sort-f.html  index-sort-l.html  index.html  utils.cpp.func-sort-c.html  utils.cpp.func.html  utils.cpp.gcov.html
include/handlers/: game_grpc.hpp
include/managers/: igdb_manager.hpp  igdb_namager.hpp  manager.hpp
include/parser/: json_parser.hpp
include/repository/: postgres_manager.hpp  repository.hpp
include/structs/: game_info.hpp  game_postgres.hpp
include/tools/: utils.hpp
postgresql/schemas/: playhub.sql
src/: main.cpp
src/handlers/: game_grpc.cpp
src/managers/: igdb_manager.cpp
src/parser/: json_parser.cpp
src/repository/: postgres_manager.cpp
src/tools/: utils.cpp
tests/: conftest.py  game_service_test.cpp  json_parser_test.cpp  utils_test.cpp
